objects/WT_Customer_Verification_Attempt_Log__c.object
<CustomObject>
    <fields>
        <fullName>WT_Account_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Attempt_Type__c</fullName>
        <label>Attempt Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Date_Verification_Attempted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <label>Customer Verification Attempt Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Verification Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Verification Attempt Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>